--- a/setup_satellite.yml
+++ b/setup_satellite.yml
@@ -29,7 +29,7 @@
     - name: Set the Organization Label from specific org selection via "{{ organization_name }}" variable and .Label
       ansible.builtin.set_fact: sat_org_label={{ hammer_org_list_result.stdout | from_json | json_query(my_query) }}
       vars:
-        my_query: "[?Label=='{{ organization_name }}'].Label"
+        my_query: "[?Name=='{{ organization_name }}'].Label"
 
     - name: What is the Org Label?
       ansible.builtin.debug:
