Add three tier app EE to three tier app smoke test job template.

--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -575,6 +575,7 @@ controller_templates:
     project: Three Tier App / Dev
     playbook: SmokeTest_3TA_AWS.yml
     inventory: EC2 Dynamic Inventory
+    execution_environment: three tier app execution environment
     credentials:
       - Workshop Credential
     extra_vars:
