--- a/server_register.yml
+++ b/server_register.yml
@@ -15,6 +15,6 @@
       when:
         - "ansible_distribution == 'CentOS'"
         - "ansible_distribution_major_version | int  == 7"
-      command: |
+      ansible.builtin.command: |
         yum-config-manager --enable \*
 ...
