--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -8,7 +8,7 @@ controller_templates:
       - Workshop Credential
     limit: rhel7
     extra_vars:
-      org_id: "My_Organization"
+      org_id: "Default Organization"
       rhsm_enabled_repos:
         - rhel-7-server-rpms
         - rhel-7-server-extras-rpms
@@ -42,7 +42,7 @@ controller_templates:
       - Workshop Credential
     limit: centos7
     extra_vars:
-      org_id: "My_Organization"
+      org_id: "Default Organization"
       product_name_or_regex: "Community Enterprise OS 7"
     notification_templates_started: Telemetry
     notification_templates_success: Telemetry
@@ -167,7 +167,7 @@ controller_templates:
           variable: lifecycle_environment
           type: multiplechoice
           choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^CentOS.*$') | map(attribute='name') | list}}"
-          required: true  
+          required: true
 
   - name: SATELLITE / Delete host(s) in "node_group"
     project: Automated Management
@@ -236,7 +236,7 @@ controller_templates:
       - Satellite Credential
       - Workshop Credential
     extra_vars:
-      org_id: My_Organization
+      org_id: "Default Organization"
     notification_templates_started: Telemetry
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
@@ -260,7 +260,7 @@ controller_templates:
       - Satellite Credential
       - Workshop Credential
     extra_vars:
-      org_id: My_Organization
+      org_id: "Default Organization"
     notification_templates_started: Telemetry
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
@@ -477,7 +477,7 @@ controller_templates:
     credentials:
       - Workshop Credential
     extra_vars:
-      satellite_organization: 'My_Organization'
+      satellite_organization: 'Default Organization'
     survey_enabled: true
     survey:
       name: ''
@@ -502,7 +502,7 @@ controller_templates:
       - Satellite Credential
       - Workshop Credential
     extra_vars:
-      org_id: "My_Organization"
+      org_id: "Default Organization"
     notification_templates_started: Telemetry
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
@@ -531,7 +531,7 @@ controller_templates:
     credentials:
       - Workshop Credential
     extra_vars:
-      org_id: "My_Organization"
+      org_id: "Default Organization"
       convert_convert2rhel_opts: '--no-rpm-va'
       convert_reboot_requested: true
     notification_templates_started: Telemetry
