--- a/leapp_vars_88_92.yml
+++ b/leapp_vars_88_92.yml
@@ -1,6 +1,6 @@
 ---
 leapp_upgrade_type: satellite
-satellite_organization: 'My_Organization'
+satellite_organization: 'Default Organization'
 leapp_repos_enabled:
   - 'satellite-client-6-for-rhel-{{ ansible_distribution_major_version | int + 1 }}-x86_64-rpms'
 analysis_packages_el7:
