--- a/server_register.yml
+++ b/server_register.yml
@@ -9,17 +9,18 @@
     sat_url: satellite.example.com
     include_offset_task_delay: false
   tasks:
-    - block:
+    - name: Offset task delay
       when: include_offset_task_delay
-      - name: Set delay time via gather_facts
-        ansible.builtin.set_fact:
-          node_delay_time: "{{ inventory_hostname | regex_replace('^\\D+|\\..*', '') | int *30 }}"
+      block:
+        - name: Set delay time via gather_facts
+          ansible.builtin.set_fact:
+            node_delay_time: "{{ inventory_hostname | regex_replace('^\\D+|\\..*', '') | int *30 }}"
 
-      - name: Include delay to offset system registrations
-        ansible.builtin.command: |
-          python3 -c 'import time;time.sleep({{ node_delay_time }})'
-        delegate_to: localhost
-        connection: local
+        - name: Include delay to offset system registrations
+          ansible.builtin.command: |
+            python3 -c 'import time;time.sleep({{ node_delay_time }})'
+          delegate_to: localhost
+          connection: local
   
     - name: Register system
       ansible.builtin.include_role:
