--- a/group_vars/control/worflow_job_templates.yml
+++ b/group_vars/control/worflow_job_templates.yml
@@ -406,4 +406,44 @@ controller_workflows:
         extra_data:
           dynamic_inventory_group: "aws_ec2"
         success_nodes: []
+
+  - name: Z / Start workshop instances
+    description: Workflow for workshop instance startup
+    inventory: Workshop Inventory
+    state: present
+    organization: Default
+    survey_enabled: false
+    simplified_workflow_nodes:
+      - identifier: EC2 Instance action - start CentOS7 nodes
+        unified_job_template: EC2 / Instance action
+        organization: Default
+        all_parents_must_converge: false
+        extra_data:
+          instance_action: start
+          content_view: CentOS7
+          stage: Dev
+        success_nodes: []
+      - identifier: EC2 Instance action - start RHEL7 nodes
+        unified_job_template: EC2 / Instance action
+        organization: Default
+        all_parents_must_converge: false
+        extra_data:
+          instance_action: start
+          content_view: RHEL7
+          stage: Dev
+        success_nodes: []
+      - identifier: EC2 Instance action - start Satellite node
+        unified_job_template: EC2 / Instance action
+        organization: Default
+        all_parents_must_converge: false
+        extra_data:
+          instance_action: start
+          content_view: RHEL7
+          stage: Dev
+          instances:
+            tags:
+              guid: "{{ lookup('env', 'AWX_HOST' ).split('.')[1] }}"
+              Student: "{{ lookup('env', 'AWX_HOST').split('.')[0] | urlsplit('hostname') }}"
+              short_name: satellite
+        success_nodes: []
 ...
