switch to no task delay

--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -13,7 +13,7 @@ controller_templates:
         - rhel-7-server-rpms
         - rhel-7-server-extras-rpms
         - rhel-7-server-satellite-client-6-rpms
-      include_offset_task_delay: true
+      include_offset_task_delay: false
     notification_templates_started: Telemetry
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
