Adjust line modification to include =

--- a/remediate_rhel8.yml
+++ b/remediate_rhel8.yml
@@ -10,7 +10,7 @@
   ansible.builtin.lineinfile:
     path: "/etc/firewalld/firewalld.conf"
     regex: "^(#)?{{ item.key }}"
-    line: "{{ item.key }} {{ item.value }}"
+    line: "{{ item.key }}={{ item.value }}"
     state: present
   loop:
     - {key: "AllowZoneDrifting", value: "no"}
